--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-MONGODB_URI=mongodb://localhost:27017/your_database_name
-JWT_SECRET=your_secret_key
+MONGODB_URI=mongodb+srv://auth:new2023gsc@cluster0.ykp1jfb.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET=newSecret
+PORT=5000
+
