--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-MONGO_URL=mongodb://localhost:27017/auth
+MONGO_URL=mongodb+srv://auth:new2023gsc@cluster0.ykp1jfb.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=newSecret
-PORT=5000
